Fix: Window gaps

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -31,7 +31,7 @@ window#waybar.hyprland > box {
   margin-top: 14px;
   margin-right: 24px;
   margin-left: 24px;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
 }
 
 window#waybar widget button {
